# Machine-Learning-Projects

./: Simple_Linear_Regression_Model.ipynb  main.py  pyproject.toml  spam-email-detection.ipynb
